--- a/thanks.css
+++ b/thanks.css
@@ -1,95 +1,98 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,400;6..12,500;6..12,600&display=swap');
+
+body {
+    font-family: Roboto, sans-serif;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    width: 50%;
+}
+
 .navbar {
-    width: 200px;
-    height: auto;
+    width: 100%;
+    max-width: 200px;
     font-family: Roboto;
-    transform: translateX(135px);
+    margin-left: 18%;
 }
+
 .navbar-brand img {
-    width: 200px; 
+    width: 100%;
     height: auto;
 }
+
 .steps-container {
     display: flex;
     align-items: center;
-    transform: translateX(60px);
-    position: relative;
-    left: 120px;
-    position: absolute;
-    top: 90px;
+    flex-wrap: wrap;
 }
+
 .steps-container a.step1,
 .steps-container a.step2,
 .steps-container a.step3 {
-    color: #56B280; 
-    text-decoration: none; 
+    color: #56B280;
+    text-decoration: none;
     font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
+    font-size: 1em;
     font-weight: 500;
-    line-height: 25.6px;
+    line-height: 1.6;
+    margin: 0.5em 0;
 }
+
 .step-arrow {
-    width: 10px;
-    height: 10px;
+    width: 1em;
+    height: 1em;
     color: #272727;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 10px;
+    margin: 0 0.25em;
     color: var(--black, #272727);
     font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
+    font-size: 1em;;
     font-weight: 500;
-    line-height: 25.6px; 
-    letter-spacing: -0.9px;
+    line-height: 1.6;
+    letter-spacing: -0.09em;;
 }
-.step{
-    color: var(--black, #272727);
-}
+
 .content {
-    width: 50%;
-    height: auto;
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: center;
-    box-sizing: border-box;
-    padding: 20px;
+    width: 100%;
+    max-width: 90%;
+    margin: 0 auto;
+    padding: 2%;
     font-family: Roboto;
+    box-sizing: border-box;
 }
+
 .check {
-    width: 500px;
-    height: 500px;
-    flex-shrink: 0;
-    transform: translateX(200px);
-    padding: 0rem;
-    position: absolute;
+    width: 80%;
+    height: auto;
+    padding: 2rem;
     top: 250px;
     color: var(--green, #56B280);
     position: absolute;
     top: 150px;
     transform: translateX(230px);
-    }
+}
+
 .display-4 {
     color: var(--black, #272727);
     text-align: center;
     font-family: Poppins;
-    font-size: 24px;
+    font-size: 1,5vw;
     font-style: normal;
     font-weight: 500;
-    line-height: 57.6px;
-    letter-spacing: -0.9px;
+    line-height: 1.6;
+    letter-spacing: -0.09em;
     display: flex;
     position: absolute;
-    top: 220px;
-    transform: translateX(-30px);
+    top: 70%;
+    transform: translateX(-17%); 
     white-space: nowrap;
     position: fixed;
+    margin-top: 1.5%;
 }
+
 .pedido {
     display: flex;
     width: 560px;
@@ -102,76 +105,79 @@
     transform: translateX(40px);
     position: fixed;
 }
+
 .order {
     color: #56B280;
-    justify-content: center;
     text-align: center;
     font-family: Helvetica;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 15.6px;
-    position: fixed;
+    font-size: 1rem;
+    font-weight: 500;
+    margin-top: 20px;
+    margin-left: -85%;
 }
+
 .texto {
-    width: 540px;
-    height: 51px;
-    flex-shrink: 0;
+    width: 90%;
+    height: auto;
     color: #818181;
     font-family: Helvetica;
-    font-size: 15px;
+    font-size: 0,8vw;
     font-style: normal;
     font-weight: 500;
-    line-height: 15.6px;
+    line-height: 1;
     position: absolute;
-    top: 100px;
-    transform: translateX(-200px);
-    position: fixed;
+    top: 90%;
+    left: -35%;
 }
+
 .butao {
     display: inline-flex;
-    padding: 8px 34px;
+    align-items: center;
+    padding: 2% 3%;
     align-items: flex-start;
-    gap: 10px;
+    gap: 1%;
     border-radius: 4px;
     background: #56B280;
-    margin-left: 120px;
+    margin-left: 30%;
     text-align: center;
     font-family: Roboto;
-    font-size: 20.645px;
-    font-style: normal;
+    font-size: 1rem;
     font-weight: 500;
     line-height: normal;
-    position: fixed;
 }
+
+.butao:hover {
+    background: #4C9F6F;
+}
+
 .btn {
     color: #FFFFFF;
     text-align: center;
     font-family: Roboto;
-    font-size: 20.645px;
-    font-style: normal;
+    font-size: 1rem;
     font-weight: 500;
     line-height: normal;
     background-color: transparent;
     border: none;
 }
+
 .print {
-    color: var(--green, #56B280);
+    color: #56B280;
     text-align: center;
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     font-size: 18px;
-    font-style: normal;
     font-weight: 400;
-    line-height: 25.6px;
+    line-height: 1.4;
     letter-spacing: -0.9px;
     text-decoration-line: underline;
-    width: 550px;
-    height: 100px;
-    flex-shrink: 0;
-    margin-top: 50px;
-    transform: translateX(-50px);
-    position: fixed;
+    margin-top: 2em;
+    cursor: pointer;
 }
+
+.print:hover {
+    color: #4C9F6F;
+}
+
 .product {
     display: flex;
     width: 140px;
@@ -192,6 +198,7 @@
     white-space: nowrap;
     letter-spacing: -0.9px;
 }
+
 .foto {
     width: 220px;
     height: 190px;
@@ -201,7 +208,8 @@
     transform: translateX(-280px);
     text-align: left;
 }
-.bolinha{
+
+.bolinha {
     width: 22px;
     height: 22px;
     position: absolute;
@@ -209,6 +217,7 @@
     transform: translateX(-80px);
     text-align: left;
 }
+
 .price {
     display: flex;
     width: 255px;
@@ -228,6 +237,7 @@
     transform: translateX(0px);
     letter-spacing: -0.9px;
 }
+
 .shortline1 {
     width: 500px;
     height: 1px;
@@ -237,6 +247,7 @@
     top: 350px;
     transform: translateX(-310px);
 }
+
 .shortline2 {
     width: 500px;
     height: 1px;
@@ -246,6 +257,7 @@
     top: 500px;
     transform: translateX(-310px);
 }
+
 .subtext1 {
     display: flex;
     width: 190px;
@@ -266,6 +278,7 @@
     text-align: left;
     letter-spacing: -0.9px;
 }
+
 .subtext2 {
     display: flex;
     width: 190px;
@@ -286,6 +299,7 @@
     text-align: left;
     letter-spacing: -0.9px;
 }
+
 .subtext3 {
     display: flex;
     width: 190px;
@@ -306,6 +320,7 @@
     text-align: left;
     letter-spacing: -0.9px;
 }
+
 .subamount1 {
     display: flex;
     width: 190px;
@@ -326,6 +341,7 @@
     transform: translateX(30px);
     letter-spacing: -0.9px;
 }
+
 .subamount2 {
     display: flex;
     width: 190px;
@@ -346,6 +362,7 @@
     transform: translateX(30px);
     letter-spacing: -0.9px;
 }
+
 .subamount3 {
     display: flex;
     width: 190px;
@@ -366,11 +383,13 @@
     transform: translateX(30px);
     letter-spacing: -0.9px;
 }
+
 .divider {
     width: 50%;
     height: 100vh;
     background-color: #F2F2F2;
 }
+
 .content {
     width: 100%;
     background-color: #fff;
@@ -378,21 +397,24 @@
     box-sizing: border-box;
     padding: 20px;
 }
+
 aside {
     float: left;
-    width: 20%;
+    width: 100%;
     box-sizing: border-box;
     padding: 390px;
     background-color: #F2F2F2;
     height: 100vh;
-    transform: translateX(650px);
-    position: absolute;
-    top: -500px;
+    transform: translateX(100%);
     position: fixed;
+    top: -330%;
+    position: fixed;
+    width: auto;
 }
+
 main {
     float: right;
-    width: 1440px;
+    width: 80%;
     box-sizing: border-box;
     padding: 20px;
     background-color: #fff;
@@ -400,6 +422,7 @@ main {
     display: flex;
     flex-direction: row;
 }
+
 body {
     overflow-x: hidden;
 }
